update PetsMenu with blurry backdrop > next to fix : switch between space-between and space-around

--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -1,7 +1,9 @@
 .mainContainer {
+  position: relative;
+  top: 120px;
   width: 100%;
   height: 100%;
-
+  min-height: 400px;
   /* width: 100%;
     height: 100%; */
   /* background-color: rgba(0, 0, 0, 0.5); */
@@ -9,7 +11,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  z-index: 9999;
+  z-index: 100;
   background-color: whitesmoke;
 }
 .backBtnContainer {
