--- a/src/styles/PetsMenu.module.css
+++ b/src/styles/PetsMenu.module.css
@@ -1,10 +1,12 @@
 .mainContainer {
+  position: absolute;
+  left: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  height: auto;
+  width: 90%;
+  height: 140px;
   margin-top: 120px;
   padding: 20px 0;
   z-index: 900;
@@ -16,6 +18,8 @@
 }
 
 .mainContainer.open {
+  position: asbolute;
+
   justify-content: space-evenly;
   transform: translateX(0);
 }
